Update swiper.js + projects description

--- a/public/index.html
+++ b/public/index.html
@@ -220,8 +220,7 @@
                   </a>
                   <h2 class="project--title">GitHub</h2>
                   <p class="project--info">
-                    Partie frontend de l'ancienne version de l'application
-                    GitHub
+                    Frontend de l'ancienne version de l'application GitHub.
                   </p>
                   <p class="project--techno">HTML SCSS React JS</p>
                 </div>
@@ -247,12 +246,9 @@
                   </a>
                   <h2 class="project--title">Pinterest</h2>
                   <p class="project--info">
-                    Projet fullstack avec système de login, possibilité
-                    d'ajouter des photos, de les enregistrer
+                    Reproduction de l'application Pinterest.
                   </p>
-                  <p class="project--techno">
-                    HTML SCSS React JS GraphQL MongoDB
-                  </p>
+                  <p class="project--techno">SCSS React JS GraphQL MongoDB</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -276,12 +272,10 @@
                   </a>
                   <h2 class="project--title">Ticket Master</h2>
                   <p class="project--info">
-                    Application fullstack de réservation de tiquets d'évènements
-                    avec l'API TicketMaster
+                    Reproduction de l'application de réservation de tiquets
+                    d'évènements TicketMaster.
                   </p>
-                  <p class="project--techno">
-                    HTML Tailwind CSS Next JS MongoDB
-                  </p>
+                  <p class="project--techno">Tailwind CSS Next JS MongoDB</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -304,12 +298,9 @@
                     />
                   </a>
                   <h2 class="project--title">Instagram</h2>
-                  <p class="project--info">
-                    Projet fullstack: reproduction de l'application Instagram
-                    avec ses fonctionnalités majeures
-                  </p>
+                  <p class="project--info">Clone de l'application Instagram.</p>
                   <p class="project--techno">
-                    HTML Tailwind CSS React JS GraphQL MongoDB
+                    Tailwind CSS React JS GraphQL MongoDB
                   </p>
                 </div>
 
@@ -334,8 +325,7 @@
                   </a>
                   <h2 class="project--title">Discord</h2>
                   <p class="project--info">
-                    Partie frontend de l'ancienne version web de l'application
-                    Discord
+                    Frontend de l'ancienne version de l'application web Discord.
                   </p>
                   <p class="project--techno">HTML CSS React JS</p>
                 </div>
@@ -361,12 +351,9 @@
                   </a>
                   <h2 class="project--title">Trello</h2>
                   <p class="project--info">
-                    Projet fullstack: reproduction du gestionnaire de projet
-                    Trello
+                    Reproduction du gestionnaire de projet Trello.
                   </p>
-                  <p class="project--techno">
-                    HTML Tailwind CSS Next JS MongoDB
-                  </p>
+                  <p class="project--techno">Tailwind CSS Next JS MongoDB</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -378,20 +365,16 @@
                       <i class="fab fa-github"></i>
                     </a>
                   </div>
-                  <a
-                    href="./mobile-app.html"
-                    target="_blank"
-                  >
-                    <img
-                      src="./src/img/projets/hulu-react-native.png"
-                      alt="Projet Hulu React Native"
-                      class="project--img"
-                    />
-                  </a>
+
+                  <img
+                    src="./src/img/projets/hulu-react-native.png"
+                    alt="Projet Hulu React Native"
+                    class="project--img"
+                  />
                   <h2 class="project--title">Hulu version mobile</h2>
                   <p class="project--info">
-                    Réplique de l'application Hulu en version mobile via l'API
-                    TMDB afin d'accéder aux catalogues de films.
+                    Accéder à un grand catalogue de films depuis votre téléphone
+                    avec ce clone l'application Hulu.
                   </p>
                   <p class="project--techno">
                     React Native Tailwind CSS Firebase
@@ -418,10 +401,8 @@
                     />
                   </a>
                   <h2 class="project--title">Tesla</h2>
-                  <p class="project--info">
-                    Partie frontend du site web de Tesla
-                  </p>
-                  <p class="project--techno">HTML SCSS React JS</p>
+                  <p class="project--info">Frontend du site web de Tesla.</p>
+                  <p class="project--techno">SCSS React JS</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -445,9 +426,9 @@
                   </a>
                   <h2 class="project--title">Morpion</h2>
                   <p class="project--info">
-                    Jeu du morpion réalisé avec les websockets
+                    Jeu du morpion réalisé avec les websockets.
                   </p>
-                  <p class="project--techno">HTML SCSS React JS Socket.io</p>
+                  <p class="project--techno">SCSS React JS Socket.io</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -471,12 +452,9 @@
                   </a>
                   <h2 class="project--title">Chat-App</h2>
                   <p class="project--info">
-                    Application fullstack de chat en ligne avec un système de
-                    login et la possibilité d'envoyer des messages en temps réel
+                    Application de chat en temps réel.
                   </p>
-                  <p class="project--techno">
-                    HTML CSS React JS MongoDB Socket.io
-                  </p>
+                  <p class="project--techno">CSS React JS MongoDB Socket.io</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -500,12 +478,10 @@
                   </a>
                   <h2 class="project--title">Hulu</h2>
                   <p class="project--info">
-                    Clone fullstack de l'application Hulu via l'API TMDB afin
-                    d'accéder aux catalogues de films.
+                    Accéder à un grand catalogue de films avec cette
+                    reproduction de l'application Hulu.
                   </p>
-                  <p class="project--techno">
-                    HTML Tailwind CSS Next JS MongoDB
-                  </p>
+                  <p class="project--techno">Tailwind CSS Next JS MongoDB</p>
                 </div>
 
                 <div class="swiper-slide project">
@@ -529,7 +505,7 @@
                   </a>
                   <h2 class="project--title">NextFoodApp</h2>
                   <p class="project--info">
-                    Application de commande de nourriture alléchante
+                    Commandez vos plats préférés avec NextFoodApp.
                   </p>
                   <p class="project--techno">
                     Next JS Tailwind CSS Firebase Stripe API
