Add crypto-price-tracking project

--- a/public/index.html
+++ b/public/index.html
@@ -307,27 +307,28 @@
                 <div class="swiper-slide project">
                   <div class="project--header">
                     <a
-                      href="https://github.com/LucasTamaya/DiscordClone"
+                      href="https://github.com/LucasTamaya/crypto-price-tracking"
                       target="_blank"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                   </div>
                   <a
-                    href="https://discord-clone-lucastamaya.vercel.app/"
+                    href="http://crypto-price-tracking.vercel.app/"
                     target="_blank"
                   >
                     <img
-                      src="./src/img/projets/discord.png"
-                      alt="Projet Discord"
+                      src="./src/img/projets/crypto-price-tracking.png"
+                      alt="projet crypto-price-tracking"
                       class="project--img"
                     />
                   </a>
-                  <h2 class="project--title">Discord</h2>
+                  <h2 class="project--title">Crypto Price Tracking</h2>
                   <p class="project--info">
-                    Frontend de l'ancienne version de l'application web Discord.
+                    Accéder au classement et au cours des meilleurs cryptos du
+                    moment.
                   </p>
-                  <p class="project--techno">HTML CSS React JS</p>
+                  <p class="project--techno">React JS Tailwind CSS ChartJS</p>
                 </div>
 
                 <div class="swiper-slide project">
